--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         </div>
       </div>
     </div>
+    <div class="clear-div">
+      <button class="clear">Clear All ToDo's</button>
+    </div>
     
 
     
